2005-08-20  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal): 
	Include Xfree86-4.5 in the blacklist. (Reported by 
	Andrew Benton)

2005-08-20  Billy Biggs  <vektor@dumbterm.net>

	Fix for bug #4096:

	* src/cairo-png.c: (multiply_alpha), (premultiply_data): Improve
	the performance of png reading by adding special cases for fully
	transparent and fully opaque alpha, and using the standard
	optimization for 8-bit division by 255.

	* src/cairoint.h: Add an INLINE macro for gcc.

2005-08-19  Carl Worth  <cworth@cworth.org>

	From Bertram Felgenhauer <int-e@gmx.de>:

	* test/.cvsignore:
	* test/Makefile.am:
	* test/rectangle-rounding-error-ref.png:
	* test/rectangle-rounding-error.c: (draw), (main):
	Add regression test for bug #4137 (fixed earlier).

2005-08-19  Billy Biggs  <vektor@dumbterm.net>

	* test/pixman-rotate.c: No need to include cairo-pdf.h.

2005-08-19  Carl Worth  <cworth@cworth.org>

	Fix for bug #4137:

	* src/cairo-fixed.c: (_cairo_fixed_from_double): Fix to round
	properly.

2005-08-19  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-pdf-surface.c (_cairo_pdf_surface_show_glyphs):
	Ignore really small fonts, since size zero fonts give xpdf
	fits. (#2938)

2005-08-19  Carl Worth  <cworth@cworth.org>

	* src/cairo-font.c: (_cairo_scaled_font_set_error): Fix to
	actually test scaled_font->status instead of just having a comment
	that claims to test it. Thanks to Behdad Esfahbod
	<behdad@cs.toronto.edu>.

2005-08-18  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_composite): We need
	the call to fixup_unbounded when we optimize the RENDER operator
	to XCopyArea as well.

2005-08-19  Carl Worth  <cworth@cworth.org>

	Fixes for a general problem of which bug #4094 was a specific
	instance:

	* src/cairo.c: (_cairo_set_error):
	* src/cairo-font.c: (_cairo_scaled_font_set_error):
	* src/cairo-pattern.c: (_cairo_pattern_set_error):